# prisma

./: execute_embdi.sh  pom.xml  sota.docker-compose.yml
data/: rem.py
prisma_data/: rem.py
prisma_data/ENC_MTDN_SAMPLED/: Sakila_schema1-it_schema2  Sakila_schema1-it_schema3  Sakila_schema1_schema2  Sakila_schema1_schema2-it  Sakila_schema1_schema3  Sakila_schema1_schema3-it
prisma_data/ENC_MTDN_SHUFFLED/: Sakila_schema1-it_schema2  Sakila_schema1-it_schema3  Sakila_schema1_schema2  Sakila_schema1_schema2-it  Sakila_schema1_schema3  Sakila_schema1_schema3-it
prisma_data/ENC_MTDN_SHUFFLED_DENORM/: Sakila_1-it_2  Sakila_1-it_3  Sakila_1_2  Sakila_1_2-it  Sakila_1_3  Sakila_1_3-it
prisma_data/ENC_MTSN_SAMPLED/: Sakila_schema1_schema21  Sakila_schema2_schema2-it  Sakila_schema3_schema3-it
prisma_data/ENC_MTSN_SHUFFLED/: Sakila_schema1_schema21  Sakila_schema2_schema2-it  Sakila_schema3_schema3-it
prisma_data/ORIG_MTDN_SAMPLED/: Sakila_schema1-it_schema2  Sakila_schema1-it_schema3  Sakila_schema1_schema2  Sakila_schema1_schema2-it  Sakila_schema1_schema3  Sakila_schema1_schema3-it
prisma_data/ORIG_MTDN_SAMPLED_denormalized/: Sakila_1-it_2  Sakila_1-it_3  Sakila_1_2  Sakila_1_2-it  Sakila_1_3  Sakila_1_3-it
prisma_data/ORIG_MTDN_SHUFFLED/: Sakila_1-it_2  Sakila_1-it_3  Sakila_1_2  Sakila_1_2-it  Sakila_1_3  Sakila_1_3-it
prisma_data/ORIG_MTDN_SHUFFLED_denormalized/: Sakila_1-it_2  Sakila_1-it_3  Sakila_1_2  Sakila_1_2-it  Sakila_1_3  Sakila_1_3-it
scripts/encryption/: dataset_encryptor.py
src/main/resources/embdi/: embdi_wrapper.py  pyproject.toml
(+2395 files in other folders)
