[tool.poetry]
name = "prisma_embdi"
version = "0.1.0"
description = "embdi implemention for prisma paper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python="3.10.14"
pandas="2.2.2"
numpy="1.26.4"
gensim="4.2.0"
tqdm="4.66.5"
nltk="^3.8.2"
similarity="0.0.1"
datasketch="1.6.5"
jellyfish="0.9.0"
flask="3.0.3"
networkx="3.3"
scipy="1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
